@@ -409,3 +409,7 @@
 2010-07-20  Cedric BAIL
 
 	* Improve file change detection in eet_open by checking size also.
+
+2010-08-02  Cedric BAIL
+
+	* Fix bug in eet_connection code when running on 32bits machine.
